# train-r

./: .env.example  .gitignore  CLAUDE.md  FRONTEND_README.md  GEMINI.md  README.md  README.md.backup  TRAINING_GUIDE.md  USING_OPENAI_LIBRARY_WITH_GEMINI.md  intervals_icu_api_spec.json  pyproject.toml  test_history_fetch.py  test_langsmith_tracing.py
frontend/: package-lock.json  package.json  tailwind.config.cjs  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/charts/: WorkoutChart.tsx
frontend/src/components/chat/: ChatMessage.tsx  ChatPanel.tsx  (+1 more)
frontend/src/hooks/: useWebSocket.ts
frontend/src/lib/: dashboardUtils.ts  mockWorkoutData.ts  toolAliases.ts  trainingPlanUtils.ts
frontend/src/types/: dashboard.ts  messages.ts  trainingPlan.ts  workout.ts
logs/: llm_messages.json
prompts/: plan_generator_prompt.txt  system_prompt.txt  workout_generator_prompt.txt
scripts/: coach.py  generate_test_data.py  pull_athlete_data_from_intervals.py  upload_plan_to_intervals.py  upload_workout.py
src/: config.py  main.py
src/api/: routes.py  schemas.py  websocket.py
src/integrations/: intervals.py  llm_client.py
src/models/: gemini_client.py  llm_client.py
src/scripts/: coach.py  dev.py  dev_server.py  generate_fit_workout.py  upload_workout.py
src/services/: coach_service.py  current_plan_service.py  dashboard_service.py  data_migrator.py  data_sync.py  index_builder.py  plan_uploader.py  workout_matcher.py  workout_service.py
src/tools/: create_workout_plan_tool.py  create_workout_tool.py  get_history_tool.py  handler.py  loader.py  modify_workout_tool.py
src/tools/definitions/: create_one_off_workout.json  create_workout_plan.json  get_history.json  modify_workout.json
src/utils/: conversation.py  logger.py  performance_history_formatter.py  port_manager.py  retry.py  workout_generator.py  zwo_parser.py
tests/: __init__.py  conftest.py  test_history_fetch.py  test_upload.py
tests/unit/integrations/: test_intervals_client.py
tests/unit/tools/: test_create_workout_tool.py  test_get_history_tool.py  test_loader.py
tests/unit/utils/: test_conversation.py  test_retry.py  test_workout_generator.py
train_r/: __init__.py
train_r/core/: __init__.py  config.py  conversation.py  logger.py
train_r/integrations/: intervals.py
train_r/tools/: __init__.py  handler.py  loader.py
train_r/tools/definitions/: analyse_recent_history.json  create_athelete_summary.json  create_athlete_summary.json  create_one_off_workout.json
train_r/workouts/: __init__.py  generator.py
(+27 files in other folders)
