[project]
name = "train-r"
version = "0.1.0"
description = "LLM-powered cycling coach with Gemini and intervals.icu integration"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.43.0",
    "google-generativeai>=0.8.0",
    "python-dotenv>=1.0.0",
    "requests>=2.32.0",
]

[project.scripts]
train-r = "scripts.coach:main"
train-r-upload = "scripts.upload_workout:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
