[project]
name = "train-r"
version = "0.2.0"
description = "LLM-powered cycling coach with Gemini and intervals.icu integration (Refactored Architecture)"
# readme = "README.md"  # Temporarily disabled due to encoding issues
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.119.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.32.0",
    "uvicorn>=0.38.0",
    "websockets>=15.0.1",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.1.0",
    "responses>=0.25.0",
]

[project.scripts]
# Main command
train-r = "src.scripts.dev:main"

# Utility commands
train-r-upload = "src.scripts.upload_workout:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src"]
omit = ["src/scripts/*", "tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
